fix: fix z-index

--- a/src/scss/components/_burger.scss
+++ b/src/scss/components/_burger.scss
@@ -4,7 +4,7 @@
   right: 15px;
   top: 15px;
   background: transparent;
-  z-index: 2;
+  z-index: 12;
   cursor: pointer;
   border: none;
   padding: 10px;
